--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass-chokidar": "^1.3.0",
     "react": "^16.4.1",
     "react-bulma-components": "^1.5.0",
     "react-dom": "^16.4.1",
+    "react-granim": "^1.1.0",
     "react-scripts": "1.1.4",
     "react-typography": "^0.16.13",
+    "typeface-cabin-condensed": "0.0.54",
+    "typeface-patua-one": "0.0.54",
     "typography": "^0.16.17",
     "typography-theme-funston": "^0.15.10"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
