--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "^3.1.2",
+    "express": "^4.16.3",
+    "ignore-styles": "^5.0.1",
     "node-sass-chokidar": "^1.3.0",
     "react": "^16.4.1",
     "react-bulma-components": "^1.5.0",
@@ -16,6 +20,7 @@
     "typography-theme-funston": "^0.15.10"
   },
   "scripts": {
+    "dev": "NODE_ENV=development node server/bootstrap.js",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
