--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^3.1.2",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "ignore-styles": "^5.0.1",
+    "morgan": "^1.9.0",
     "node-sass-chokidar": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "react": "^16.4.1",
     "react-bulma-components": "^1.5.0",
     "react-dom": "^16.4.1",
