--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "ignore-styles": "^5.0.1",
@@ -37,6 +36,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-social-icons": "^3.0.0"
+    "react-social-icons": "^3.0.0",
+    "dotenv": "^6.0.0"
   }
 }
