--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,18 @@ FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
 REACT_APP_API_DOMAIN=
 WEBAPP_DOMAIN=
+
+DEV_DB_USERNAME=
+DEV_DB_PASSWORD=
+DEV_DB_NAME=
+DEV_DB_HOSTNAME=
+
+TEST_DB_USERNAME=
+TEST_DB_PASSWORD=
+TEST_DB_NAME=
+TEST_DB_HOSTNAME=
+
+PROD_DB_USERNAME=
+PROD_DB_PASSWORD=
+PROD_DB_NAME=
+PROD_DB_HOSTNAME=
