--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.15.6",
     "ignore-styles": "^5.0.1",
     "morgan": "^1.9.0",
+    "mysql2": "^1.5.3",
     "node-sass-chokidar": "^1.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -22,6 +23,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-typography": "^0.16.13",
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.0.0",
     "typeface-cabin-condensed": "0.0.54",
     "typeface-patua-one": "0.0.54",
     "typography": "^0.16.17",
