--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "ignore-styles": "^5.0.1",
@@ -17,6 +18,7 @@
     "passport-facebook": "^2.1.1",
     "react": "^16.4.1",
     "react-bulma-components": "^1.5.0",
+    "react-content-loader": "^3.1.2",
     "react-dom": "^16.4.1",
     "react-granim": "^1.1.0",
     "react-router": "^4.3.1",
