--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@zeit/next-sass": "^0.2.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.18.3",
@@ -13,6 +14,10 @@
     "ignore-styles": "^5.0.1",
     "morgan": "^1.9.0",
     "mysql2": "^1.5.3",
+    "next": "^6.1.1",
+    "next-compose-plugins": "^2.1.1",
+    "next-images": "^0.10.6",
+    "node-sass": "^4.9.3",
     "node-sass-chokidar": "^1.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -24,9 +29,13 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-toolbox": "^2.0.0-beta.13",
     "react-typography": "^0.16.13",
+    "rebass": "^2.0.0-10",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
+    "styled-bootstrap-components": "^2.0.0",
+    "styled-components": "^3.4.2",
     "typeface-cabin-condensed": "0.0.54",
     "typeface-patua-one": "0.0.54",
     "typography": "^0.16.17",
@@ -35,8 +44,9 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
