--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "dotenv-webpack": "^1.5.7",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "ignore-styles": "^5.0.1",
@@ -44,9 +45,9 @@
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "dev": "next",
+    "dev": "node server/server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server/server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
