--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "alfa": "^0.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.18.3",
