--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-content-loader": "^3.1.2",
     "react-dom": "^16.4.1",
     "react-granim": "^1.1.0",
+    "react-quill": "^1.3.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0",
     "react-typography": "^0.16.13",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
